# ams-isoftrepo

./: .gitignore  CMakeLists.txt  README.md  ams-isoftrepo9.files  ams-isoftrepo9.includes
share/: CMakeLists.txt
share/etc/: isoftrepo.xml
share/systemd/: ams-isoftrepo-9.0.service  ams-isoftrepo.service
src/sbin/: CMakeLists.txt
src/sbin/ams-isoftrepo/: CMakeLists.txt  ISoftRepoOptions.hpp  ISoftRepoServer.cpp  ISoftRepoServer.hpp  _Build.cpp  _Error.cpp  _ListCategories.cpp  _ListSites.cpp  _Module.cpp  _Version.cpp
var/html/isoftrepo/styles/: main.css
var/html/isoftrepo/templates/: Build.html  Error.html  ListCategories.html  Module.html  Version.html
